<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/deviceNameString"
        android:id="@+id/registerDeviceNameID"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/IPString"
        android:id="@+id/registerIPID"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/usernameString"
        android:id="@+id/registerUsernameID"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        android:hint="@string/passwordString"
        android:id="@+id/registerPasswordID"/>

    <Button
        android:text="@string/registerString"
        android:layout_marginBottom="10dp"
        android:id="@+id/registerButtonID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
