<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/registeredDevicesID"
        android:layout_marginBottom="10dp"
        android:hint="@string/registeredDevicesString"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/IPString"
        android:id="@+id/IPID"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/usernameString"
        android:id="@+id/userNameID"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:hint="@string/passwordString"
        android:id="@+id/passwordID"/>
    
    <Button
        android:text="Login"
        android:layout_marginBottom="10dp"
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/registerHereString"
        android:id="@+id/registerButtonId"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_weight="0.5"
            android:layout_height="170dp"
            android:id="@+id/imageViewAndroid"
            android:layout_gravity="center_horizontal" />

        <ImageView
            android:layout_width="100dp"
            android:layout_weight="0.5"
            android:layout_height="170dp"
            android:id="@+id/imageViewRaspberry"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>



</LinearLayout>
